// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Container - Snapshots > matches snapshot for article element 1`] = `
<article
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Article Container
</article>
`;

exports[`Container - Snapshots > matches snapshot for block display 1`] = `
<div
  class="mx-auto w-full flex-col block"
  data-testid="container"
>
  Block Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for container size 1`] = `
<div
  class="mx-auto w-full flex-col flex container max-w-(--container-max-width)"
  data-testid="container"
>
  Container Size
</div>
`;

exports[`Container - Snapshots > matches snapshot for default size 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Default Size
</div>
`;

exports[`Container - Snapshots > matches snapshot for div element 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Div Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for extra large size 1`] = `
<div
  class="mx-auto w-full flex-col flex max-w-screen-xl"
  data-testid="container"
>
  Extra Large Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for flex display 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Flex Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for footer element 1`] = `
<footer
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Footer Container
</footer>
`;

exports[`Container - Snapshots > matches snapshot for grid display 1`] = `
<div
  class="mx-auto w-full flex-col grid"
  data-testid="container"
>
  Grid Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for header element 1`] = `
<header
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Header Container
</header>
`;

exports[`Container - Snapshots > matches snapshot for large size 1`] = `
<div
  class="mx-auto w-full flex-col flex max-w-screen-lg"
  data-testid="container"
>
  Large Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for main element 1`] = `
<main
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Main Container
</main>
`;

exports[`Container - Snapshots > matches snapshot for medium size 1`] = `
<div
  class="mx-auto w-full flex-col flex max-w-screen-md"
  data-testid="container"
>
  Medium Container
</div>
`;

exports[`Container - Snapshots > matches snapshot for section element 1`] = `
<section
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Section Container
</section>
`;

exports[`Container - Snapshots > matches snapshot for small size 1`] = `
<div
  class="mx-auto w-full flex-col flex max-w-screen-sm"
  data-testid="container"
>
  Small Container
</div>
`;

exports[`Container - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  Default Container
</div>
`;

exports[`Container - Snapshots > matches snapshots for combined props 1`] = `
<article
  class="mx-auto w-full flex-col grid max-w-screen-lg custom-class"
  data-testid="container"
>
  Combined Props Container
</article>
`;
